<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"></include>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_producto"
        android:textSize="@dimen/titulo_app_size"
        ></TextView>
    <EditText
        android:id="@+id/nombre_prod_txt_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio_del_producto"
        android:layout_marginTop="@dimen/margin_top_prod"
        android:textSize="@dimen/titulo_app_size"
        ></TextView>
    <EditText
        android:id="@+id/precio_prod_txt_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_del_la_foto"
        android:layout_marginTop="@dimen/margin_top_prod"
        android:textSize="@dimen/titulo_app_size"></TextView>
    <EditText
        android:id="@+id/url_prod_txt_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        ></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_del_producto"
        android:layout_marginTop="@dimen/margin_top_prod"
        android:textSize="@dimen/titulo_app_size"></TextView>

    <EditText
        android:id="@+id/desc_prod_txt_cr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        ></EditText>
    <Button
        android:id="@+id/crear_btn"
        android:layout_marginTop="@dimen/margin_top_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/margin_top_prod"
        android:text="@string/crear_producto"
        android:textSize="@dimen/titulo_app_size"
        ></Button>
    </LinearLayout>
